fixed past-events carousel aligning

--- a/Project/style.css
+++ b/Project/style.css
@@ -147,6 +147,7 @@ header {
 
 .panels-container { 
 	text-align: center;
+	width: 70%;
 }
 
 .name , .profession { 
@@ -346,7 +347,6 @@ a .social-icon , .links h4 {
 
 	.panels-container {
 		display: flex;
-		width: 75%;
 		flex-wrap: wrap;
 		justify-content: space-between;
 	}
@@ -408,7 +408,6 @@ a .social-icon , .links h4 {
 	.panels-container {
 		display: flex;
 		flex-wrap: wrap;
-		width: 80%;
 		justify-content: space-between;
 	}
 
@@ -464,7 +463,6 @@ a .social-icon , .links h4 {
 	.panels-container {
 		display: flex;
 		flex-wrap: wrap;
-		width: 70%;
 		justify-content: space-between;
 	}
 
@@ -540,7 +538,7 @@ a .social-icon , .links h4 {
 @media only screen and (max-width: 600px) { 
 	
 	.panels-container {
-		width: 80%;
+		width: 90%;
 	}
 
 	.panel-block { 
@@ -622,16 +620,13 @@ a .social-icon , .links h4 {
 	padding: 0;
 }
 
-.carousel-wrapper {
-	width: 75%;
-	margin: 0 auto;
+.carousel-container { 
+	width: 70%;
+	padding: 0;
 }
 
 .carousel-inner, .item img {
 	width: 100%;
-}
-
-.carousel-inner , .item img { 
 	max-height: 530px;
 }
 
@@ -645,6 +640,10 @@ a .social-icon , .links h4 {
 
 @media only screen and (min-width: 601px) and (max-width:1200px) { 
 	
+	.carousel-container {
+		width: 70%;
+	}
+	
 	.carousel-text { 
 		font-size: 25px;
 	}
@@ -652,15 +651,13 @@ a .social-icon , .links h4 {
 	.carousel-caption { 
 		margin-bottom: 10px;
 	}
-	
-	.carousel-wrapper {
-		width: 85%;
-		margin: 0 auto;
-	}
-	
 }
 
 @media only screen and (max-width: 600px) { 
+	
+	.carousel-container { 
+		width: 100%;
+	}
 	
 	.carousel-text { 
 		font-size: 15px;
@@ -669,11 +666,6 @@ a .social-icon , .links h4 {
 	.carousel-caption { 
 		margin-bottom: 1px;
 	}
-
-	.carousel-wrapper {
-		width: 100%;	
-	}
-	
 }
   
 
